@@ -1,5 +1,7 @@
 2010-06-10  Glenn Morris  <rgm@gnu.org>
 
+	* editfns.c (Fbyte_to_string): Pacify compiler.
+
 	* m/ibms390x.h: Rather than duplicating ibms390.h, just include it.
 
 2010-06-09  Stefan Monnier  <monnier@iro.umontreal.ca>
